--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="tagline">Hi Sam</h1>
+                    <h1 class="tagline">Justin Miron</h1>
                 </div>
             </div>
         </div>
