--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 
     <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file. -->
+    <!-- Note: The background image is set within the frontpage.css file. -->
     <header class="image-header">
         <div class="container">
             <div class="row">
@@ -76,6 +76,16 @@
     </header>
 
     <!-- Project links -->
+    <table class = "projects">
+        <tr class = "project-info">
+            <th>hi</th>
+            <th>noooo</th>
+        </tr>
+        <tr class = "project-info">
+            <th>Believe</th>
+            <th>Pls</th>
+        </tr>
+    </table>
 
     <!-- Footer -->
     <footer>
