new info panels

--- a/index.html
+++ b/index.html
@@ -75,17 +75,18 @@
         </div>
     </header>
 
-    <!-- Project links -->
-    <table class = "projects">
-        <tr class = "project-info">
-            <th>hi</th>
-            <th>noooo</th>
-        </tr>
-        <tr class = "project-info">
-            <th>Believe</th>
-            <th>Pls</th>
-        </tr>
-    </table>
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="..." alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+                    <p>...</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer>
