--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </header>
 
-    <table>
+    <table class="projects">
         <tr>
             <td>
                 <div class="row">
@@ -83,7 +83,7 @@
                         <div class="thumbnail">
                             <img src="..." alt="...">
                             <div class="caption">
-                                <h3>Thumbnail label</h3>
+                                <h3>Project 1</h3>
                                 <p>...</p>
                                 <p><a href="#" class="btn btn-primary" role="button">More Info</a></p>
                             </div>
@@ -97,7 +97,7 @@
                         <div class="thumbnail">
                             <img src="..." alt="...">
                             <div class="caption">
-                                <h3>Thumbnail label</h3>
+                                <h3>Project 2</h3>
                                 <p>...</p>
                                 <p><a href="#" class="btn btn-primary" role="button">More Info</a></p>
                             </div>
@@ -111,7 +111,7 @@
                         <div class="thumbnail">
                             <img src="..." alt="...">
                             <div class="caption">
-                                <h3>Thumbnail label</h3>
+                                <h3>Project 3</h3>
                                 <p>...</p>
                                 <p><a href="#" class="btn btn-primary" role="button">More Info</a></p>
                             </div>
