--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                         <a href="#">Projects</a>
                     </li>
                     <li>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/jmiron11">GitHub</a>
                     </li>
                     <li>
-                        <a href="#">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/justinmiron">LinkedIn</a>
                     </li>
                      <li>
                         <a href="#">Resume</a>
@@ -68,44 +68,50 @@
     <header class="image-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="tagline">Justin Miron</h1>
+                <div class="profile-header">
+                    <img class="img-responsive img-circle profile-image" src="images/mudrun.jpg" alt="">
+                    <div class="intro-text">
+                        <h1 class="tagline">Justin Miron</h1>
+                    </div>
                 </div>
-            </div>
         </div>
     </header>
 
-    <div class="row">
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="..." alt="...">
-                <div class="caption">
-                    <h3>Project 1</h3>
-                    <p>...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">More Info</a></p>
-                </div>
+    <!-- Projects Row -->
+    <div class="projects">
+        <div class="projects-header">
+            <h2 class="project-header-text">Projects</h2>
+        </div>
+        <div class="row">
+            <div class="col-md-4 project-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                </a>
+                <h3>
+                    <a href="#">Project Name</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 project-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                </a>
+                <h3>
+                    <a href="#">Project Name</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 project-item">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                </a>
+                <h3>
+                    <a href="#">Project Name</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="..." alt="...">
-                <div class="caption">
-                    <h3>Project 2</h3>
-                    <p>...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">More Info</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="..." alt="...">
-                <div class="caption">
-                    <h3>Project 3</h3>
-                    <p>...</p>
-                    <p><a href="#" class="btn btn-primary" role="button">More Info</a></p>
-                </div>
-            </div>
-        </div>
+        <!-- /.row -->
     </div>
 
     <!-- Footer -->
