added proflie image

--- a/index.html
+++ b/index.html
@@ -66,14 +66,9 @@
     <!-- Image Background Page Header -->
     <!-- Note: The background image is set within the frontpage.css file. -->
     <header class="image-header">
-        <div class="container">
-            <div class="row">
-                <div class="profile-header">
-                    <img class="img-responsive img-circle profile-image" src="images/mudrun.jpg" alt="">
-                    <div class="intro-text">
-                        <h1 class="tagline">Justin Miron</h1>
-                    </div>
-                </div>
+        <div class="profile-header">
+            <img class="img-responsive img-circle profile-image" src="images/mudrun.jpg" alt="">
+            <h2>About Me</h2>
         </div>
     </header>
 
@@ -88,27 +83,27 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Name</a>
+                    <a href="#">Music-Swap</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Project description</p>
             </div>
             <div class="col-md-4 project-item">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Name</a>
+                    <a href="#">Red Wings Statistics</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Project description</p>
             </div>
             <div class="col-md-4 project-item">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Name</a>
+                    <a href="#">UpNext Group Jukebox</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Project description  </p>
             </div>
         </div>
         <!-- /.row -->
