--- a/index.html
+++ b/index.html
@@ -66,10 +66,17 @@
     <!-- Image Background Page Header -->
     <!-- Note: The background image is set within the frontpage.css file. -->
     <header class="image-header">
-        <div class="profile-header">
-            <img class="img-responsive img-circle profile-image" src="images/mudrun.jpg" alt="">
-            <h2>About Me</h2>
-        </div>
+        <table>
+            <tr>
+                <td class="profile-header">
+                        <img class="img-responsive img-circle profile-image" src="images/mudrun.jpg" alt="">
+                </td>
+                <td>
+                    <h2 class="about-me">About Me</h2>
+                    <p class="about-me-info">My name is Justin Miron. I am a junior in Computer Engineering at the Univeristy of Illinois in Urbana-Champaign. I will be receiving my B.S. in May of 2017. While at the University of Illinois I work closely with Habitat for Humanity, work IT for Technology Services at UIUC, and am an ELA for the freshman engineering orientation course ENG 100. Additionally I love messing with side projects, a few of which are featured below. Asides from the work I do, I enjoy music, longboarding, and nature.</p>
+                </td>
+            </tr>
+        </table>
     </header>
 
     <!-- Projects Row -->
