added groupjukebox project

--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
             </div>
             <div class="col-md-4 project-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="/images/upnext.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Red Wings Statistics</a>
+                    <a href="#">UpNext Group Jukebox</a>
                 </h3>
-                <p>Project description</p>
+                <p>A collaborative spotify queue for group settings created at the corporate Viasat 2015 Hackathon. Built using a Mopidy server and libspotify. The backend utilized a NodeJS server that managed the queue and handled interactions with the Mopidy server.</p>
             </div>
             <div class="col-md-4 project-item">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">UpNext Group Jukebox</a>
+                    <a href="#">ATMega328p Wifi-LEDs</a>
                 </h3>
                 <p>Project description  </p>
             </div>
