added upnext musicplayer project

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,19 +10,8 @@
 
     <title>Justin Miron</title>
 
-    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="css/frontpage.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -63,8 +51,6 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the frontpage.css file. -->
     <header class="image-header">
         <table>
             <tr>
@@ -73,7 +59,7 @@
                 </td>
                 <td>
                     <h2 class="about-me">About Me</h2>
-                    <p class="about-me-info">My name is Justin Miron. I am a junior in Computer Engineering at the Univeristy of Illinois in Urbana-Champaign. I will be receiving my B.S. in May of 2017. While at the University of Illinois I work closely with Habitat for Humanity, work IT for Technology Services at UIUC, and am an ELA for the freshman engineering orientation course ENG 100. Additionally I love messing with side projects, a few of which are featured below. Asides from the work I do, I enjoy music, longboarding, and nature.</p>
+                    <p class="about-me-info">My name is Justin Miron. I am a junior studying Computer Engineering at the Univeristy of Illinois in Urbana-Champaign. While at the University of Illinois I closely work with Habitat for Humanity, am an ELA for the freshman engineering orientation course ENG 100, and currently am employed by in IT at Technology Services for the university. Additionally I love messing with side projects, a few of which are featured below. Asides from the work I do, I enjoy music, longboarding, and nature.</p>
                 </td>
             </tr>
         </table>
@@ -90,9 +76,10 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">Music-Swap</a>
+                    <a href="#">Music Swap</a>
                 </h3>
-                <p>Project description</p>
+                <h4>Java - NodeJS - mongoDB</h4>
+                <p>A music artist sharing android app based around matching users with similar preferences. Allows the user to build a profile based on artists they like and allows them to either begin a chat or an exchange artist interface with matches. The android app communicates with the nodeJS server over websockets. The backend consists of a nodeJS server which communicates with a mongodb server.</p>
             </div>
             <div class="col-md-4 project-item">
                 <a href="#">
@@ -101,16 +88,18 @@
                 <h3>
                     <a href="#">UpNext Group Jukebox</a>
                 </h3>
-                <p>A collaborative spotify queue for group settings created at the corporate Viasat 2015 Hackathon. Built using a Mopidy server and libspotify. The backend utilized a NodeJS server that managed the queue and handled interactions with the Mopidy server.</p>
+                <h4>HTML - AngularJS - NodeJS - Mopidy</h4>
+                <p>A collaborative spotify queue created at the corporate Viasat 2015 Hackathon. Geared at users within group settings to better share song choice. The queue reflects the votes of users on songs.  Built using a Mopidy server and libspotify. The backend utilized a NodeJS server that managed the queue and handled interactions with the Mopidy server.</p>
             </div>
             <div class="col-md-4 project-item">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">ATMega328p Wifi-LEDs</a>
+                    <a href="#">ATMega328p Wifi IO</a>
                 </h3>
-                <p>Project description  </p>
+                <h4>AVR C</h4>
+                <p>Current project underway to learn AVR programming. Involves building a circuit to bootload an ATMega328p and handling IO over a wifi connection</p>
             </div>
         </div>
         <!-- /.row -->
@@ -125,14 +114,10 @@
         </div>
         <!-- /.row -->
     </footer>
-
-    </div>
     <!-- /.container -->
 
-    <!-- jQuery -->
+    <!-- scripts -->
     <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
 </body>
