--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="https://www.linkedin.com/in/justinmiron">LinkedIn</a>
                     </li>
                      <li>
-                        <a href="#">Resume</a>
+                        <a href="JustinMironResume7-22-15.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
