added projects page and moreabout me

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Projects</a>
+                        <a href="./projects/">Projects</a>
                     </li>
                     <li>
                         <a href="https://github.com/jmiron11">GitHub</a>
@@ -43,6 +43,9 @@
                     </li>
                      <li>
                         <a href="JustinMironResume7-22-15.pdf">Resume</a>
+                    </li>
+                    <li>
+                        <a href="#">More About Me</a>
                     </li>
                 </ul>
             </div>
@@ -83,7 +86,7 @@
             </div>
             <div class="col-md-4 project-item">
                 <a href="#">
-                    <img class="img-responsive" src="/images/upnext.png" alt="">
+                    <img class="img-responsive" src="images/upnext.png" alt="">
                 </a>
                 <h3>
                     <a href="#">UpNext Group Jukebox</a>
