--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </td>
                 <td>
                     <h2 class="about-me">About Me</h2>
-                    <p class="about-me-info">My name is Justin Miron. I am a junior studying Computer Engineering at the Univeristy of Illinois in Urbana-Champaign. While at the University of Illinois I closely work with Habitat for Humanity, am an ELA for the freshman engineering orientation course ENG 100, and currently am employed by in IT at Technology Services for the university. Additionally I love messing with side projects, a few of which are featured below. Asides from the work I do, I enjoy music, longboarding, and nature.</p>
+                    <p class="about-me-info">My name is Justin Miron. I am a junior studying Computer Engineering at the Univeristy of Illinois in Urbana-Champaign. While at the University of Illinois I closely work with Habitat for Humanity, am an ELA for the freshman engineering orientation course ENG 100, and am currently working IT for Technology Services at the university. Additionally I love messing with side projects, a few of which are featured below. Asides from the work I do, I enjoy music, longboarding, and nature.</p>
                 </td>
             </tr>
         </table>
