new images and projects page updates

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </td>
                 <td>
                     <h2 class="about-me">About Me</h2>
-                    <p class="about-me-info">My name is Justin Miron. I am a junior studying Computer Engineering at the Univeristy of Illinois in Urbana-Champaign. While at the University of Illinois I closely work with Habitat for Humanity, am an ELA for the freshman engineering orientation course ENG 100, and am currently working IT for Technology Services at the university. Additionally I love messing with side projects, a few of which are featured below. Asides from the work I do, I enjoy music, longboarding, and nature.</p>
+                    <p class="about-me-info">My name is Justin Miron. I am a junior at the Univeristy of Illinois in Urbana-Champaign. I will be graduating with a B.S. in Computer Engineering in May of 2017. I love what I am learning and am always looking for a new challenges in my field. My most recent challenge was a software engineering internship over the summer at ViaSat located in Carlsbad, CA. I have also been working on a few side projects in my spare-time, a few of which can be seen below and on the projects page. Outside of my academics I love watching hockey (Let's go Red Wings), relaxing on my longboard, music, and exploring nature.</p>
                 </td>
             </tr>
         </table>
@@ -76,12 +76,12 @@
         <div class="row">
             <div class="col-md-4 project-item">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive" src="images/musicswap.png" alt="">
                 </a>
                 <h3>
                     <a href="#">Music Swap</a>
                 </h3>
-                <h4>Java - NodeJS - mongoDB</h4>
+                <h4>Java - NodeJS - mongoDB - LastFM API</h4>
                 <p>A music artist sharing android app based around matching users with similar preferences. Allows the user to build a profile based on artists they like and allows them to either begin a chat or an exchange artist interface with matches. The android app communicates with the nodeJS server over websockets. The backend consists of a nodeJS server which communicates with a mongodb server.</p>
             </div>
             <div class="col-md-4 project-item">
