--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,112 @@
         <!-- /.container -->
     </nav>
 
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Projects
+                <small>Completed</small>
+            </h1>
+        </div>
+    </div>
+
+    <!-- Projects Row -->
+    <div class="projects">
+
+        <div class="row project-row">
+            <div class="col-md-6">
+                <a href="#">
+                    <img class="img-responsive project-img" src="../images/upnext.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 project-item">
+                <h2><b>UpNext Group Jukebox</b></h2>
+                <h3>HTML - AngularJS - NodeJS - Mopidy</h3>
+                <br>
+                <p>A collaborative spotify queue created at the corporate Viasat 2015 Hackathon. Geared at users within group settings to better share song choice. The queue reflects the votes of users on songs.  Built using a Mopidy server and libspotify. The backend utilized a NodeJS server that managed the queue and handled interactions with the Mopidy server.</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row project-row">
+            <div class="col-md-6">
+                <a href="#">
+                    <img class="img-responsive project-img" src="../images/musicswap.png" alt="">
+                </a>
+            </div>
+
+             <div class="col-md-6 project-item">
+                <h2><b>Music Swap</b></h2>
+                <h3>Java - NodeJS - mongoDB</h3>
+                <br>
+                <p>A music artist sharing android app based around matching users with similar preferences. Allows the user to build a profile based on artists they like and allows them to either begin a chat or an exchange artist interface with matches. The android app communicates with the nodeJS server over websockets. The backend consists of a nodeJS server which communicates with a mongodb server.</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+        <div class="col-lg-12">
+            <h2>Projects
+                <small>In Progress</small>
+            </h2>
+        </div>
+        </div>
+
+       <div class="row project-row">
+            <div class="col-md-6">
+                <a href="#">
+                    <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 project-item">
+                <h2><b>The Event App</b></h2>
+                <h3>Java - Node.JS - mongoDB - Google Maps API</h3>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row project-row">
+            <div class="col-md-6">
+                <a href="#">
+                    <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 project-item">
+                <h2><b>ATMega328p Bootloader</b></h2>
+                <h3>Android Shield</h3>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row project-row">
+            <div class="col-md-6">
+                <a href="#">
+                    <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 project-item">
+                <h2><b>Apartment Helper</b></h2>
+                <h3>Java - ?</h3>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Justin Miron 2015</p>
+            </div>
+        </div>
+        <!-- /.row -->
+    </footer>
+
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
 
