--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="JustinMironResume7-22-15.pdf">Resume</a>
                     </li>
                     <li>
-                        <a href="#">More About Me</a>
+                        <a href="./moreaboutme/">More About Me</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
                 </td>
                 <td>
                     <h2 class="about-me">About Me</h2>
-                    <p class="about-me-info">My name is Justin Miron. I am a junior at the Univeristy of Illinois in Urbana-Champaign. I will be graduating with a B.S. in Computer Engineering in May of 2017. I love what I am learning and am always looking for a new challenges in my field. My most recent challenge was a software engineering internship over the summer at ViaSat located in Carlsbad, CA. I have also been working on a few side projects in my spare-time, a few of which can be seen below and on the projects page. Outside of my academics I love watching hockey (Let's go Red Wings), relaxing on my longboard, music, and exploring nature.</p>
+                    <p class="about-me-info">My name is Justin Miron. I am a junior at the Univeristy of Illinois in Urbana-Champaign. I will be graduating with a B.S. in Computer Engineering in May of 2017. I love what I am learning and am always looking for a new challenges in my field. My most recent challenge was a software engineering internship over the summer at ViaSat located in Carlsbad, CA, where I learned a lot about programming in a more corporate and group-centric setting. I have also been working on a few side projects in my spare-time, a few of which can be seen below and on the projects page. Outside of my academics I love watching hockey (Let's go Red Wings), relaxing on my longboard, music, and exploring nature.</p>
                 </td>
             </tr>
         </table>
@@ -99,10 +99,10 @@
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="#">ATMega328p Wifi IO</a>
+                    <a href="#">ATMega328p Bootloader</a>
                 </h3>
                 <h4>AVR C</h4>
-                <p>Current project underway to learn AVR programming. Involves building a circuit to bootload an ATMega328p and handling IO over a wifi connection</p>
+                <p>A current project that will ease my ability to bootload AVR microcontrollers, specifically the ATMega328p and eventually the ATTiny. I have been tinkering with embedded systems being controlled by AVR microcontrollers and this project will ease prototyping.</p>
             </div>
         </div>
         <!-- /.row -->
