--- a/projects/index.html
+++ b/projects/index.html
@@ -44,9 +44,6 @@
                      <li>
                         <a href="JustinMironResume7-22-15.pdf">Resume</a>
                     </li>
-                    <li>
-                        <a href="#">More About Me</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -65,7 +62,7 @@
     <!-- Projects Row -->
     <div class="projects">
 
-        <div class="row project-row">
+        <div class="row project-row" name="upnext">
             <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="../images/upnext.png" alt="">
@@ -81,7 +78,7 @@
 
         <hr>
 
-        <div class="row project-row">
+        <div class="row project-row" name="musicswap">
             <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="../images/musicswap.png" alt="">
@@ -106,7 +103,7 @@
         </div>
         </div>
 
-       <div class="row project-row">
+       <div class="row project-row" name="eventapp">
             <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
@@ -115,12 +112,17 @@
             <div class="col-md-6 project-item">
                 <h2><b>The Event App</b></h2>
                 <h3>Java - Node.JS - mongoDB - Google Maps API</h3>
+                <br>
+                <p>
+                A current group project involving managing events. My contribution is mostly on the back-end node.js server as well as managing the mongoDB database, as well as Google Map integration and API calls.
+                Thus far we planned features as well as well as designed the UI. We have come up with what is neccessary to get the app in a working state and have begun coding.
+                </p>
             </div>
         </div>
 
         <hr>
 
-        <div class="row project-row">
+        <div class="row project-row" name="bootloader">
             <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
@@ -129,12 +131,16 @@
             <div class="col-md-6 project-item">
                 <h2><b>ATMega328p Bootloader</b></h2>
                 <h3>Android Shield</h3>
+                <br>
+                <p>
+                A current project that will ease my ability to bootload AVR microcontrollers, specifically the ATMega328p and eventually the ATTiny. I have been tinkering with embedded systems being controlled by AVR microcontrollers and this project will ease prototyping.
+                </p>
             </div>
         </div>
 
         <hr>
 
-        <div class="row project-row">
+        <div class="row project-row" name="apartmenthelper">
             <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
@@ -143,6 +149,10 @@
             <div class="col-md-6 project-item">
                 <h2><b>Apartment Helper</b></h2>
                 <h3>Java - ?</h3>
+                <br>
+                <p>
+                An app being worked on with a friend based around managing an apartment involving bills, messy roommates, and accountability amongst roommates. For the most part this app began as a small joke, but is beginning to progress towards something viable.
+                </p>
             </div>
         </div>
 
