new projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -104,11 +104,11 @@
         </div>
 
        <div class="row project-row" name="eventapp">
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
                 </a>
-            </div>
+            </div> -->
             <div class="col-md-6 project-item">
                 <h2><b>The Event App</b></h2>
                 <h3>Java - Node.JS - mongoDB - Google Maps API</h3>
@@ -123,11 +123,11 @@
         <hr>
 
         <div class="row project-row" name="bootloader">
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
                 </a>
-            </div>
+            </div> -->
             <div class="col-md-6 project-item">
                 <h2><b>ATMega328p Bootloader</b></h2>
                 <h3>Android Shield</h3>
@@ -141,11 +141,11 @@
         <hr>
 
         <div class="row project-row" name="apartmenthelper">
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <a href="#">
                     <img class="img-responsive project-img" src="http://placehold.it/700x350" alt="">
                 </a>
-            </div>
+            </div> -->
             <div class="col-md-6 project-item">
                 <h2><b>Apartment Helper</b></h2>
                 <h3>Java - ?</h3>
