--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </td>
                 <td>
                     <h2 class="about-me">About Me</h2>
-                    <p class="about-me-info">My name is Justin Miron. I am a junior at the Univeristy of Illinois in Urbana-Champaign. I will be graduating with a B.S. in Computer Engineering in May of 2017. I love what I am learning and am always looking for a new challenges in my field. My most recent challenge was a software engineering internship over the summer at ViaSat located in Carlsbad, CA, where I learned a lot about programming in a more corporate and group-centric setting. I have also been working on a few side projects in my spare-time, a few of which can be seen below and on the projects page. Outside of my academics I love watching hockey (Let's go Red Wings), relaxing on my longboard, music, and exploring nature.</p>
+                    <p class="about-me-info">My name is Justin Miron. I am a junior at the Univeristy of Illinois in Urbana-Champaign. I will be graduating with a B.S. in Computer Engineering in May of 2017. I love what I am learning and am always looking for a new challenges in my field. My most recent challenge was a software engineering internship over the summer at ViaSat located in Carlsbad, CA, where I learned a lot about programming in a team and managing time to meet deadlines. I have also been working on a few side projects in my spare-time, a few of which can be seen below and on the projects page. Outside of my academics I love watching hockey (Let's go Red Wings), relaxing on my longboard, music, and exploring nature.</p>
                 </td>
             </tr>
         </table>
