added current projects to main page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
                      <li>
                         <a href="JustinMironResume7-22-15.pdf">Resume</a>
                     </li>
-                    <li>
-                        <a href="./moreaboutme/">More About Me</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -81,7 +78,7 @@
                 <h3>
                     <a href="#">Music Swap</a>
                 </h3>
-                <h4>Java - NodeJS - mongoDB - LastFM API</h4>
+                <h4>Java - Node.js - mongoDB - LastFM API</h4>
                 <p>A music artist sharing android app based around matching users with similar preferences. Allows the user to build a profile based on artists they like and allows them to either begin a chat or an exchange artist interface with matches. The android app communicates with the nodeJS server over websockets. The backend consists of a nodeJS server which communicates with a mongodb server.</p>
             </div>
             <div class="col-md-4 project-item">
@@ -91,18 +88,33 @@
                 <h3>
                     <a href="#">UpNext Group Jukebox</a>
                 </h3>
-                <h4>HTML - AngularJS - NodeJS - Mopidy</h4>
+                <h4>HTML - AngularJS - Node.js - Mopidy</h4>
                 <p>A collaborative spotify queue created at the corporate Viasat 2015 Hackathon. Geared at users within group settings to better share song choice. The queue reflects the votes of users on songs.  Built using a Mopidy server and libspotify. The backend utilized a NodeJS server that managed the queue and handled interactions with the Mopidy server.</p>
             </div>
-            <div class="col-md-4 project-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
+            <div class="col-md-4 current-projects">
+                <h2 class="underline"> Current Projects </h2>
                 <h3>
                     <a href="#">ATMega328p Bootloader</a>
+                    <small>AVR C</small>
                 </h3>
-                <h4>AVR C</h4>
                 <p>A current project that will ease my ability to bootload AVR microcontrollers, specifically the ATMega328p and eventually the ATTiny. I have been tinkering with embedded systems being controlled by AVR microcontrollers and this project will ease prototyping.</p>
+                <hr>
+                <h3>
+                    <a href="#">The Event App</a>
+                    <small>Java - Node.js - mongoDB - Google Maps API </small>
+                </h3>
+                <p> A current group project involving managing events. My contribution is mostly on the back-end node.js server as well as managing the mongoDB database, as well as Google Map integration and API calls.
+                </p>
+                <hr>
+                <h3>
+                    <a href="#">Apartment Helper</a>
+                    <small>Java - Node.js - mongoDB - Google Calander API</small>
+                </h3>
+                <p> An app being worked on with a friend based around managing an apartment involving bills, messy roommates, and accountability amongst roommates. My contribution is split evenly between
+                server side and client side.
+
+
+
             </div>
         </div>
         <!-- /.row -->
