front page formatting

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <!-- /.container -->
     </nav>
-
+￼
     <header class="image-header">
         <table>
             <tr>
@@ -67,8 +67,13 @@
 
     <!-- Projects Row -->
     <div class="projects">
-        <div class="projects-header">
-            <h2 class="project-header-text">Projects</h2>
+        <div class="row">
+            <div class="col-md-8 projects-header">
+                <h2 class="project-header-text underline">Projects</h2>
+            </div>
+            <div class="col-md-4 projects-header">
+                <h2 class="project-header-text underline"> Current Projects </h2>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-4 project-item">
@@ -92,7 +97,6 @@
                 <p>A collaborative spotify queue created at the corporate Viasat 2015 Hackathon. Geared at users within group settings to better share song choice. The queue reflects the votes of users on songs.  Built using a Mopidy server and libspotify. The backend utilized a NodeJS server that managed the queue and handled interactions with the Mopidy server.</p>
             </div>
             <div class="col-md-4 current-projects">
-                <h2 class="underline"> Current Projects </h2>
                 <h3>
                     <a href="#">ATMega328p Bootloader</a>
                     <small>AVR C</small>
