--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <!-- /.container -->
     </nav>
-￼
+
     <header class="image-header">
         <table>
             <tr>
@@ -108,6 +108,13 @@
                     <small>Java - Node.js - mongoDB - Google Maps API </small>
                 </h3>
                 <p> A current group project involving managing events. My contribution is mostly on the back-end node.js server as well as managing the mongoDB database, as well as Google Map integration and API calls.
+                </p>
+                <hr>
+                <h3>
+                    <a href="#">DWM Status Bar</a>
+                    <small>C - Alsa API</small>
+                </h3>
+                <p> A status bar for the dwm window manager which displays neccessary information such as battery life, time, volume, and the status of my wireless connection. 
                 </p>
                 <hr>
                 <h3>
